[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/boss.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Boss.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 13 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 54, 16 )

[node name="Boss" type="KinematicBody2D"]
collision_layer = 2147483652
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1, 0 )
scale = Vector2( 1.0625, 1.0625 )
texture = ExtResource( 1 )

[node name="Boss" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boss"]
position = Vector2( 0, 4 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
autostart = true
[connection signal="body_entered" from="Boss" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Boss" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
